# jellyfin-utils

./: .gitignore  README.md  TIMELOG.md  archive-backups.sh  compress_mkv.sh  orchestrate.sh  pyproject.toml  requirements.txt  rip_disk.sh  sync-movie-to-server.sh
legacy/: archive-backups.sh  compress_tv.sh  orchestrate.sh  organize_files.sh  sync-movie-to-server.sh  sync-tv-to-server.sh
py/: cli.py  client.py  info_parser.py  models.py  progress_tracker.py  pyproject.toml  requirements.txt  rip_disk.py
py/data/: ffmpeg-output.txt  full-disc-info.txt
py/src/media_tools/: cli.py
py/src/media_tools/ffmpeg_tool/: client.py  compress_mkv.py  progress_tracker.py
py/src/media_tools/makemkv_tool/: __init__.py  client.py  info_parser.py  models.py  progress_tracker.py  rip_disk.py
py/src/media_tools/omdb_tool/: __init__.py  organize_files.py
py/src/media_tools/rsync_tool/: client.py
py/tests/: test_ffmpeg_client.py  test_ffmpeg_progress.py  test_info_parser.py  test_mkv_progress.py
src/media_tools/: __init__.py  cli.py
src/media_tools/ffmpeg_tool/: __init__.py  client.py  compress_mkv.py  progress.py
src/media_tools/makemkv_tool/: __init__.py  client.py  info_parser.py  models.py  progress.py  render.py  rip_disk.py
src/media_tools/omdb_tool/: __init__.py  organize_files.py
src/media_tools/other/: __init__.py  find_missing.py  find_missing_raw.py
src/media_tools/rsync_tool/: __init__.py  client.py  includes.txt  models.py  progress.py  render.py  sync_to_server.py  sync_with_server.py
tests/: test_compress_mkv.py  test_config.py  test_ffmpeg_client.py  test_ffmpeg_progress.py  test_info_parser.py  test_mkv_client.py  test_mkv_progress.py  test_rsync_client.py  test_rsync_progress.py
tests/data/: drive-info-test.txt  ffmpeg-output.txt  full-info-prog-output.txt  full-mkv-prog-output.txt  rsync-sample-log.txt
(+2 files in other folders)
